--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,5 +23,6 @@
     "react-markdown": "^9.0.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
